ingress-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-ns
  labels:
    name: ingress-ns
