namespcae.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: getbestanswers-ns
  labels:
    name: getbestanswers-ns
