service.yaml
apiVersion: v1
kind: Service
metadata:
  name: getbestanswers-svc
  namespace: getbestanswers-ns
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: getbestanswers-app
