svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: getbestanswers-svc-bridge
  namespace: ingress-ns
  
spec:
  type: ExternalName
  #externalName: service_name.service_namespace
  externalName: getbestanswers-svc.getbestanswers-ns
