ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartinfo-ingress
  namespace: ingress-ns
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  
  - host: test3.getbestanswers.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: getbestanswers-svc-bridge
            port:
              number: 80
